Avoid more layout shifts

--- a/packages/ui/css/main.css
+++ b/packages/ui/css/main.css
@@ -55,10 +55,6 @@ body {
   pointer-events: none;
 }
 
-#popup > * {
-  pointer-events: all;
-}
-
 ul {
   list-style: square;
 }
